@@ -4,8 +4,11 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-; for the slider Generic?
-CONFIG_ADVANCED="Advanced configuration"
+; slider
+PLG_TINY_FIELD_LABEL_ADVANCEDPARAMS="Advanced parameters"
+
+; spacer as text
+PLG_TINY_FIELD_NAME_EXTENDED="<strong>Extended Mode Options</strong><br />These options only apply in Extended mode."
 
 ; Tinymce.php string
 PLG_TINY_ERR_TEMPLATECSSFILENOTPRESENT="Could not find the file 'editor.css' in the template or templates/system folder. No styles are available."
@@ -138,6 +141,3 @@ PLG_TINY_FIELD_VALUE_SILVER="Office2007 Silver"
 PLG_TINY_FIELD_VALUE_SIMPLE="Simple"
 PLG_TINY_FIELD_VALUE_TOP="Top"
 PLG_TINY_XML_DESCRIPTION="TinyMCE is a platform-independent Web-based JavaScript HTML WYSIWYG Editor control."
-
-; old tiny separator TODO
-PARAMS EXTENDED MODE="<strong>Extended Mode Options</strong><br />These options only apply in Extended mode."
