@@ -350,3 +350,4 @@ JFIELD_PUBLISHED_DESC="Set publication state"
 JFIELD_PUBLISHED_LABEL="Published"
 JFIELD_TITLE_DESC="Title for the"
 JFIELD_TITLE_LABEL="Title"
+JFIELD_SPACER_LABEL="<span style="_QQ_"width:auto"_QQ_"><hr /></span>"
